fixed too big data of avatar editor

--- a/next/next-all/pages/editor/language/[language].module.css
+++ b/next/next-all/pages/editor/language/[language].module.css
@@ -175,3 +175,59 @@
     color: var(--text-color);
     font-weight: bold;
 }
+
+
+/* */
+
+.header_index {
+    width: 100%;
+    height: 60px;
+    border-bottom: 2px solid var(--header-border);
+    background: var(--body-background);
+    z-index: 1;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position: fixed;
+    xpadding: 0 calc((100% - 1000px)/2);
+    padding: 0 20px;
+    top: 0;
+}
+@media (max-width: 1040px) {
+    .header_index {
+        padding: 0 20px;
+    }
+}
+
+
+.editor_button:hover {
+    filter: brightness(.7) contrast(2.5);
+}
+.editor_button:hover {
+    color: var(--text-color);
+}
+.editor_button {
+    color: var(--text-color-dim);
+    padding: 14px 34px;
+    cursor: pointer;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    width: 105px;
+    text-decoration: none;
+}
+.editor_button img {
+    margin-right: 10px;
+    width: 36px;
+}
+@media (max-width: 1120px) {
+    .editor_button {
+        flex-direction: column;
+        width: auto;
+    }
+}
+
+.main_index {
+    margin-top: 60px;
+}
